# tg-say-my-post

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  npm-shrinkwrap.json  package.json  pyproject.toml  tsconfig.json
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-telegram-tts-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-silero-tts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-melotts-tts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-piper-tts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-vosk-tts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-text-preprocessing-llm/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  index.ts
src/bot/: __init__.py  handlers.py  models.py  prefix.py  text_preprocess.py  validators.py  worker.py
src/cli/: __init__.py  interactive_tts.py  piper_tts.py  preprocess.py  run_bot.py  silero_tts.py  synth_stub.py  vosk_tts.py
src/config/: env.ts
src/extractors/: errors.ts  index.test.ts  index.ts
src/logging/: logger.ts
src/preprocessing/: __init__.py  basic.py  chunking.py  index.test.ts  index.ts  llm.py  pipeline.py  programmatic.py  validation.py
src/synthesis/: __init__.py  interface.py  piper.py  silero.py  stub.py  types.py  vosk.py
(+48 files in other folders)
