[project]
name = "tg-say-my-post"
version = "0.1.0"
description = "Telegram TTS bot with synthesis stub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=21.0.0",
  "pydub>=0.25.1",
  "soundfile>=0.12.1",
  "torch>=2.1.0",
  "torchaudio>=2.1.0",
  "omegaconf>=2.3.0",
  "scipy>=1.11.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "python-dotenv>=1.0.1",
  "piper-tts>=1.3.0",
  "vosk-tts>=0.3.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]



